Completed BCD-236. Added /exposure-result-datasets/{id}/contents and /exposure-result-datasets/{id}/export Also, updated openapi.yaml with /batch-tasks/pending, /batch-tasks/completed
